[build-system]
requires = ["setuptools>=65.5.0", "setuptools_scm[toml]>=6.4.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dissect.util"
description = "A Dissect module implementing various utility functions for the other Dissect modules"
readme = "README.md"
requires-python = "~=3.9"
license.text = "Apache License 2.0"
authors = [
  {name = "Dissect Team", email = "dissect@fox-it.com"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Internet :: Log Analysis",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Security",
  "Topic :: Utilities",
]
dynamic = ["version"]

[project.urls]
homepage = "https://dissect.tools"
documentation = "https://docs.dissect.tools/en/latest/projects/dissect.util"
repository = "https://github.com/fox-it/dissect.util"

[project.optional-dependencies]
lzo = [
    # There are no Windows PyPy wheels available for python-lzo
    # So we use a pure python fallback for it.
    "python-lzo; platform_system != 'Windows' or platform_python_implementation != 'PyPy'",
]
lz4 = [
    "lz4",
]

[project.scripts]
dump-nskeyedarchiver = "dissect.util.tools.dump_nskeyedarchiver:main"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
known_first_party = ["dissect.util"]
known_third_party = ["dissect"]

[tool.setuptools]
license-files = ["LICENSE", "COPYRIGHT"]

[tool.setuptools.packages.find]
include = ["dissect.*"]

[tool.setuptools_scm]
